[gd_scene load_steps=2 format=3 uid="uid://df5u2n8x"]

[ext_resource type="Script" path="res://scripts/ui/setting_menu.gd" id="1_setting"]

[node name="SettingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_setting")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="HeaderLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 24.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "機材セッティング"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = -32.0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "戻る"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="PipeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PipeContainer"]
layout_mode = 2
text = "シーシャ台 (Pipe)"

[node name="PipeOption" type="OptionButton" parent="VBoxContainer/PipeContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BowlContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/BowlContainer"]
layout_mode = 2
text = "ボウル (Bowl)"

[node name="BowlOption" type="OptionButton" parent="VBoxContainer/BowlContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HMSContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HMSContainer"]
layout_mode = 2
text = "ヒートマネジメントシステム (HMS)"

[node name="HMSOption" type="OptionButton" parent="VBoxContainer/HMSContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InfoLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 220.0
offset_top = -120.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
text = "装備を変更できます。"
